API functions to retrieve data and form submission

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,12 @@
     <header>
       <h1>Dave's Weather App</h1>
     </header>
+    <!-- Form to collect location -->
+    <form id="locationForm">
+      <label for="locationInput">Enter City, State:</label>
+      <input type="text" id="locationInput" name="location" required />
+      <button type="submit">Get Weather</button>
+    </form>
     <div class="content"></div>
   </body>
 </html>
