--- a/src/template.html
+++ b/src/template.html
@@ -15,6 +15,10 @@
       <input type="text" id="locationInput" name="location" required />
       <button type="submit">Get Weather</button>
     </form>
+    <!-- Loading icon container -->
+    <div id="loading">
+      <div class="spinner"></div>
+    </div>
     <div class="content"></div>
   </body>
 </html>
